--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,3 +4,4 @@ image:
 tasks:
   - init: pnpm i
   - init: npm i -g npm-check-updates
+  - init: sudo apt-get install ffmpeg libsm6 libxext6 libegl1 libopengl0 -y && sudo -v && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
