--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gitbook-cli",
-    "version": "2.3.2",
+    "version": "2.4.2",
     "homepage": "https://www.gitbook.com",
     "description": "CLI to generate books and documentation using gitbook",
     "main": "bin/gitbook.js",
@@ -8,19 +8,17 @@
         "q": "1.5.0",
         "lodash": "4.17.4",
         "semver": "5.3.0",
-        "npmi": "1.0.1",
         "tmp": "0.0.31",
         "commander": "2.11.0",
         "optimist": "0.6.1",
         "fs-extra": "3.0.1",
         "bash-color": "0.0.4",
-        "npm": "10.8.1",
+        "gitbook": "3.2.3",
         "user-home": "2.0.0"
     },
     "devDependencies": {
         "mocha": "3.4.2",
-        "should": "11.2.1",
-        "gitbook": "2.5.0-beta.1"
+        "should": "11.2.1"
     },
     "scripts": {
         "test": "mocha --reporter spec --recursive --bail"
